--- a/capstone_data_science.ipynb
+++ b/capstone_data_science.ipynb
@@ -2516,7 +2516,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 117,
+      "execution_count": 123,
       "metadata": {
         "id": "TacK7DRFSpsm"
       },
@@ -2526,26 +2526,19 @@
           "output_type": "stream",
           "text": [
             "      Actual Selling Price  Predicted Selling Price  Percentage Difference\n",
-            "3719                465000            497539.980000               6.997845\n",
-            "3230                500000            483149.900000              -3.370020\n",
-            "3757                614000            756869.790000              23.268695\n",
-            "202                 220000            186900.000000             -15.045455\n",
-            "1137                355000            352300.000000              -0.760563\n",
-            "2540                821000            417539.900000             -49.142521\n",
-            "1627                515000            885012.500000              71.847087\n",
-            "2750                340000            322809.960000              -5.055894\n",
-            "3135                160000            238250.000000              48.906250\n",
-            "1164                630000            793749.990000              25.992062\n",
-            "2762                350000            350000.000000               0.000000\n",
-            "1086                480000            409729.950000             -14.639594\n",
-            "3357                750000            819999.850000               9.333313\n",
-            "2616                400000            415450.000000               3.862500\n",
-            "2361                800000            825250.000000               3.156250\n",
-            "1642                825000            585260.000000             -29.059394\n",
-            "1289                800000            743899.990000              -7.012501\n",
-            "1448                350000            197906.496667             -43.455287\n",
-            "278                 700000            583699.990000             -16.614287\n",
-            "2398                750000            750000.000000               0.000000\n"
+            "2224                550000                482959.99             -12.189093\n",
+            "1038                 75000                 72190.00              -3.746667\n",
+            "3396                795000                660310.00             -16.942138\n",
+            "1275                320000                289009.97              -9.684384\n",
+            "2479                300000                350750.00              16.916667\n",
+            "...                    ...                      ...                    ...\n",
+            "128                 400000                438059.99               9.514997\n",
+            "2104                610000                572760.00              -6.104918\n",
+            "1180                165000                174920.00               6.012121\n",
+            "1277                380000                380099.99               0.026313\n",
+            "1745                349000                412809.99              18.283665\n",
+            "\n",
+            "[200 rows x 3 columns]\n"
           ]
         }
       ],
@@ -2559,7 +2552,7 @@
         "cars_modify = pd.read_csv('cars_modify.csv')\n",
         "\n",
         "# Pick 20 random data points\n",
-        "random_data = random.sample(list(cars_modify.index), 20)\n",
+        "random_data = random.sample(list(cars_modify.index), 200)\n",
         "\n",
         "# Load the saved model\n",
         "loaded_model = pickle.load(open('best_model.pkl', 'rb'))\n",
